objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Subsegment__c</fullName>
        <label>Subsegment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Food_Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Seed breeder</fullName>
                </value>
                <value>
                    <fullName>Farmer</fullName>
                </value>
                <value>
                    <fullName>Grain trader/Elevator/Terminal</fullName>
                </value>
                <value>
                    <fullName>Flour milling</fullName>
                </value>
                <value>
                    <fullName>Malting</fullName>
                </value>
                <value>
                    <fullName>Oilseed crushing</fullName>
                </value>
                <value>
                    <fullName>Other grain processing</fullName>
                </value>
                <value>
                    <fullName>Grain research</fullName>
                </value>
                <value>
                    <fullName>Dairy farms/cooperatives</fullName>
                </value>
                <value>
                    <fullName>Milk collection centers</fullName>
                </value>
                <value>
                    <fullName>Central Milk Testing</fullName>
                </value>
                <value>
                    <fullName>Packaged milk</fullName>
                </value>
                <value>
                    <fullName>Cheese producer</fullName>
                </value>
                <value>
                    <fullName>Dairy powders</fullName>
                </value>
                <value>
                    <fullName>Ice cream</fullName>
                </value>
                <value>
                    <fullName>Human milk providers</fullName>
                </value>
                <value>
                    <fullName>Other dairy</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Livestock (cattle, pigs, poultry)</fullName>
                </value>
                <value>
                    <fullName>Fish processing</fullName>
                </value>
                <value>
                    <fullName>Sausage production</fullName>
                </value>
                <value>
                    <fullName>Ground meat and Burger production</fullName>
                </value>
                <value>
                    <fullName>Mechanically separated meat</fullName>
                </value>
                <value>
                    <fullName>Rendering</fullName>
                </value>
                <value>
                    <fullName>Other meat</fullName>
                </value>
                <value>
                    <fullName>Snackfood</fullName>
                </value>
                <value>
                    <fullName>Bread/baking</fullName>
                </value>
                <value>
                    <fullName>Sugar production</fullName>
                </value>
                <value>
                    <fullName>Pasta/Noodle production</fullName>
                </value>
                <value>
                    <fullName>Brewing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next Gen</fullName>
                </value>
                <value>
                    <fullName>Sanger</fullName>
                </value>
                <value>
                    <fullName>Roche 454</fullName>
                </value>
                <value>
                    <fullName>Illumina Genome Analyzer</fullName>
                </value>
                <value>
                    <fullName>AB SOLiD</fullName>
                </value>
                <value>
                    <fullName>AB Sanger</fullName>
                </value>
                <value>
                    <fullName>Tag Profiling</fullName>
                </value>
                <value>
                    <fullName>ChIP Seq</fullName>
                </value>
                <value>
                    <fullName>Resequencing</fullName>
                </value>
                <value>
                    <fullName>Transcriptome Pipeline</fullName>
                </value>
                <value>
                    <fullName>De novo Genome Assembly</fullName>
                </value>
                <value>
                    <fullName>De novo Transcriptome Assembly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>WC OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>WD OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>round(TODAY()- datevalue(CreatedDate) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since lead record creation</inlineHelpText>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaptureDate__c</fullName>
        <description>Date in which lead was entered into AdTrack</description>
        <label>CaptureDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <formula>CASE( MOD( TODAY() - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energy List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultiVendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiVendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Lead_ID__c</fullName>
        <description>SAP Lead ID</description>
        <label>SAP Lead ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BioTech_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BioTech List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_QL__c</fullName>
        <description>evaluates to true when conditions are met. Used for Routing</description>
        <formula>if((TODAY() - Hot_Date_Only__c) &lt;= 7, &apos;true&apos;,
if((TODAY() - Warm_Date_Only__c) &lt;= 7, &apos;true&apos;, &apos;false&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted QL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_DNA__c</fullName>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Suppor</fullName>
                </value>
                <value>
                    <fullName>Educational Software</fullName>
                </value>
                <value>
                    <fullName>Finch Suite OnDemand</fullName>
                </value>
                <value>
                    <fullName>Finch Suite Products</fullName>
                </value>
                <value>
                    <fullName>FinchTV</fullName>
                </value>
                <value>
                    <fullName>iFinch</fullName>
                </value>
                <value>
                    <fullName>Next Gen Sequencing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic Laboratory</fullName>
                </value>
                <value>
                    <fullName>Academic Researcher</fullName>
                </value>
                <value>
                    <fullName>B2B Manager</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Clinical Coordinator</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Cord Blood Contact</fullName>
                </value>
                <value>
                    <fullName>Corporate Management</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>EH&amp;S</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Genetic Counselor</fullName>
                </value>
                <value>
                    <fullName>Geneticist</fullName>
                    <label>GENETICIST</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Labor &amp; Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Lab Technician</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing &amp; QA/QC</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse/Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Physician (Cancer)</fullName>
                </value>
                <value>
                    <fullName>Physician (Cardiology)</fullName>
                </value>
                <value>
                    <fullName>Physician (Neurology)</fullName>
                </value>
                <value>
                    <fullName>Physician (Other)</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Material__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagerEmail__c</fullName>
        <description>Lookup to the manager if one exist, and get the email of the manager</description>
        <formula>Owner:User.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonMQL_Count__c</fullName>
        <formula>IF(NONMQL__c = TRUE , 1,0)</formula>
        <label>NonMQL Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Score__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Person Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Multi-select list, but prefer only one product line per lead for best results in reporting.</description>
        <inlineHelpText>Please select single PRIMARY product line for this lead.</inlineHelpText>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>AVS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>BTX</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>CDI</fullName>
                </value>
                <value>
                    <fullName>CHO</fullName>
                </value>
                <value>
                    <fullName>CKP</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CMG</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DAB</fullName>
                </value>
                <value>
                    <fullName>DAO</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>DL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reagent_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reagent List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_No__c</fullName>
        <description>This is the Adtrack key for each new lead</description>
        <label>ReferenceNbr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_URL__c</fullName>
        <label>Referrer URL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Priority__c</fullName>
        <description>SAP Priority</description>
        <label>SAP Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Water__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bounced_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Syncs with Eloqua on bounce backs. Workflow rule unchecks this box when email is upadated.</description>
        <inlineHelpText>Checkbox = a bounced email from an eloqua campaign, please correct email if known.</inlineHelpText>
        <label>Bounced Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chemical_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genomics_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genomics List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <description>Automatic formua to divide leads into PKI Global Regions - APAC, EMEA, Americas</description>
        <formula>IF(ISBLANK(Country), &quot;None&quot;,

IF(CONTAINS(&quot;US:CA:PR:VI:PM:AR:BZ:BO:BR:CL:CO:CR:CW:EC:SV:FK:GT:GY:HN:MX:NI:PA:PY:PE:SR:UY:VE:AI:AG:AW:BS:BB:BM:KY:CU:DM:DO:GL:GD:GP:HT:JM:MQ:MS:KN:LC:VC:TC:TT:AN:VG:&quot;, Country), &quot;Americas&quot;,

IF(CONTAINS(&quot;AT:BE:CH:DE:DK:ES:FI:FR:GB:IE:IT:LU:NL:NO:PL:SE:AF:BH:BD:BT:BV:IO:KM:IN:IR:KW:MV:NP:OM:PK:QA:SA:LK:AE:YE:DZ:AD:AO:BJ:BW:BF:BI:CM:CV:CF:TD:CG:DJ:EG:GQ:ER:ET:FX:GF:GA:GM:GH:GI:GN:GW:IQ:CI:JO:KE:LB:LS:LR:LY:NU:MG:MW:KZ:LK:MV:SC:ML:MR:MU:YT:MC:MA:MZ:NA:NE:NG:PT:RW:SM:ST:SN:SC:SL:SO:ZA:ES:SH:SD:SZ:TZ:TG:TN:UG:EH:ZM:ZW:CD:VA:AL:AM:AZ:BY:BA:BV:BG:HR:CY:CZ:EE:FO:MK:GE:GR:GL:HU:IS:IL:KZ:KG:LV:LI:LT:MT:MD:ME:RS:RO:RU:SK:SI:SY:TJ:TR:TM:UA:UZ:PS:SS&quot;, Country), &quot;EMEA&quot;,

IF(CONTAINS(&quot;JP:AS:AQ:AU:BN:KH:CN:CX:CC:CK:TP:FJ:PF:TF:GU:HM:HK:ID:KI:LA:MO:MY:MH:FM:MN:MM:NR:NC:NZ:NU:NF:KP:MP:PW:PG:PH:PN:WS:SG:SB:KR:TW:TH:TK:TO:TM:TV:UM:VU:VN:WF&quot;, Country), &quot;APAC&quot;, &quot;Other&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Date_Only__c</fullName>
        <formula>DATEVALUE(Qualified_Lead_Hot_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hot Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GS LE - Sanger</fullName>
                </value>
                <value>
                    <fullName>GS LE - NextGen</fullName>
                </value>
                <value>
                    <fullName>GL LE - Microarray</fullName>
                </value>
                <value>
                    <fullName>GS AE - Microarray</fullName>
                </value>
                <value>
                    <fullName>GS AE - Analysis Kit</fullName>
                </value>
                <value>
                    <fullName>Channel Partner - End User</fullName>
                </value>
                <value>
                    <fullName>Support/Maintenance</fullName>
                </value>
                <value>
                    <fullName>GeneSifter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Chemicals__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Chemicals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type_INF__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>External Tradeshow/Seminar</fullName>
                </value>
                <value>
                    <fullName>PKI Event</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Contact Request</fullName>
                </value>
                <value>
                    <fullName>Request a Demo</fullName>
                </value>
                <value>
                    <fullName>Request a Quote</fullName>
                </value>
                <value>
                    <fullName>Request Information</fullName>
                </value>
                <value>
                    <fullName>BAO</fullName>
                </value>
                <value>
                    <fullName>EOL Referral</fullName>
                </value>
                <value>
                    <fullName>Competitor Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <description>Name of profile assigned to Owner.</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Eloqua_ID__c</fullName>
        <description>This field is used as an external ID for the Eloqua and SFDC integration.</description>
        <externalId>true</externalId>
        <label>PKI Eloqua ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QualifiedDate__c</fullName>
        <description>Date on which questions or someone asked the contact about their inquiry</description>
        <label>QualifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <description>used by Eloqua and Apogee for detail</description>
        <label>Source Detail</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Energy__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Energy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Which Account Referred Us This Lead?</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Which Account Referred Us This Lead?)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>missedRouting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets stamped if missed routing</description>
        <label>missedRouting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buying_Horizon__c</fullName>
        <label>Buying Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>12+ Months</fullName>
                </value>
                <value>
                    <fullName>Not Asked</fullName>
                </value>
                <value>
                    <fullName>No Plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Workflow</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>